generated-in/docking/dcimgui_nodefaultargfunctions_internal.h

CIMGUI_API int          cImUpperPowerOfTwo(int v);
CIMGUI_API float  cImTrunc(float f);
CIMGUI_API ImVec2 cImTruncImVec2(ImVec2 v);
CIMGUI_API float  cImTrunc64(float f);
CIMGUI_API bool   cImTriangleContainsPoint(ImVec2 a, ImVec2 b, ImVec2 c, ImVec2 p);
CIMGUI_API bool   cImTriangleIsClockwise(ImVec2 a, ImVec2 b, ImVec2 c);
typedef enum
{
    ImGuiPlotType_Lines,
    ImGuiPlotType_Histogram,
} ImGuiPlotType;
// Plot
CIMGUI_API int ImGui_PlotEx(ImGuiPlotType plot_type, const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 size_arg);