generated-out/vanilla/dear-imgui-raw-vanilla-internal/cbits/DearImGuiWrappers.h

bool cImTriangleIsClockwise_wrap(ImVec2 const* a, ImVec2 const* b, ImVec2 const* c);
void cImTruncImVec2_wrap(ImVec2 const* v, ImVec2* _out);
int ImGui_PlotEx_wrap(ImGuiPlotType plot_type, const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 const* size_arg);