generated-out/docking/dear-imgui-raw-docking-internal/src/DearImGui/Raw/Internal.hsc


cImTriangleContainsPoint :: ImVec2 -> ImVec2 -> ImVec2 -> ImVec2 -> IO CBool
cImTriangleContainsPoint a b c p =
  with a $ \_p0 -> with b $ \_p1 -> with c $ \_p2 -> with p $ \_p3 -> c_cImTriangleContainsPoint _p0 _p1 _p2 _p3

foreign import capi unsafe "DearImGuiWrappers.h cImTriangleIsClockwise_wrap"
  c_cImTriangleIsClockwise :: (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> IO CBool

cImTriangleIsClockwise :: ImVec2 -> ImVec2 -> ImVec2 -> IO CBool
cImTriangleIsClockwise a b c =
  with a $ \_p0 -> with b $ \_p1 -> with c $ \_p2 -> c_cImTriangleIsClockwise _p0 _p1 _p2

-- C: float ImTrunc(float f)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImTrunc"
  cImTrunc :: CFloat -> IO CFloat
-- C: float ImTrunc64(float f)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImTrunc64"
  cImTrunc64 :: CFloat -> IO CFloat
foreign import capi unsafe "DearImGuiWrappers.h cImTruncImVec2_wrap"
  c_cImTruncImVec2 :: (Ptr ImVec2) -> (Ptr ImVec2) -> IO ()

cImTruncImVec2 :: ImVec2 -> IO ImVec2
cImTruncImVec2 v =
  with v $ \_p0 -> alloca $ \_pOut -> c_cImTruncImVec2 _p0 _pOut >> peek _pOut

-- C: int ImUpperPowerOfTwo(int v)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImUpperPowerOfTwo"
  cImUpperPowerOfTwo :: CInt -> IO CInt
